--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(20, 70, 400);
+    background-color: rgb(20, 70, 100000000);
     color: linen;
     font-size: 150%;
     line-height: 1.4;
